--- a/package.json
+++ b/package.json
@@ -11,20 +11,26 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.4",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "npm": "^7.14.0",
+    "nuxt": "^2.15.3",
+    "webpack": "^4.45.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/style-resources": "^1.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
-    "prettier": "^2.2.1"
+    "node-sass": "^6.0.0",
+    "prettier": "^2.2.1",
+    "sass-loader": "^10.1.1"
   }
 }
